[package]
name = "Rust-Experiments"
version = "0.1.0"
authors = ["Thomas Moll <quanta@iastate.edu>"]

[dependencies]
piston = "0.24.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.28.0"
piston2d-opengl_graphics = "0.31.0"

[[bin]]
name = "spinning_circle"
path = "src/spinning_circle.rs"

[[bin]]
name = "sorting"
path = "src/sorting.rs"